--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   http: ^1.2.0
   get_it: ^7.6.7
   cached_network_image: ^3.3.1
+  go_router: ^13.2.2
+  sliver_tools: ^0.2.12
+  shimmer: ^3.0.0
+  pull_to_refresh: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
