--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   sliver_tools: ^0.2.12
   shimmer: ^3.0.0
   pull_to_refresh: ^2.0.0
+  smooth_page_indicator: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
