--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   animated_text_kit: ^4.2.2
   lottie: ^3.1.0
   flutter_animate: ^4.5.0
+  adaptive_theme: ^3.6.0
+  shared_preferences: ^2.2.2
+  
+
 
 
   # The following adds the Cupertino Icons font to your application.
