--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^2.2.2
   country_code_picker: ^3.0.0
   rive: ^0.13.1
+  flutter_launcher_icons: ^0.13.1
   
 
 
@@ -43,6 +44,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/assets/images/logo.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#FF2950"
+  remove_alpha_ios: true
+
 
 flutter:
 
