--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   country_code_picker: ^3.0.0
   rive: ^0.13.1
   flutter_launcher_icons: ^0.13.1
+  bottom_navy_bar: ^6.0.0
   
 
 
